fixed gallery but broked theme!

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: home 
 ---
     <div ID="ngy2p" data-nanogallery2='{
         "itemsBaseURL": "{{ site.photos-baseurl }}",
