fixed css with include overide

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,5 +1,5 @@
 ---
-layout: home 
+layout: default 
 ---
     <div ID="ngy2p" data-nanogallery2='{
         "itemsBaseURL": "{{ site.photos-baseurl }}",
